<resources>
    <string name="app_name">MadProjectFinal</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_your_book_companion">Welcome to your Book Companion</string>
    <string name="click_to_continue">Click to continue</string>
    <string name="log_in_page">Log In Page</string>
    <string name="user_name1">User Name</string>
    <string name="password1">Password</string>
    <string name="welcome_sign_up_to_continue">Welcome! Sign Up to continue</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="all_book_details">All Book Details</string>
    <string name="click_to_show_all_books">Click to show all books</string>
    <string name="log_out">Log Out</string>
    <string name="simple_text">simple text</string>
    <string name="all_books">All Books</string>
    <string name="my_list">My List</string>
    <string name="logout">Logout</string>
</resources>